# hexlikes

./: .copier-answers.hexdoc-mod.yml  .gitignore  LICENSE.txt  README.md  build.gradle  gradle.properties  pyproject.toml  settings.gradle
.github/workflows/: build_docs.yml
common/: build.gradle
common/src/main/java/hauveli/fishcasting/: CommonClass.java  Constants.java  Fishcasting.java
common/src/main/java/hauveli/fishcasting/common/: BlessedEntity.java  CursedEntity.java  FishcastingConfig.java  FishcastingLoreFragment.java  FishcastingModMenuIntegration.java
common/src/main/java/hauveli/fishcasting/hexcasting/: BobberBasedCastEnv.java  FishcastingActions.java  FishcastingFishArithmetic.java
common/src/main/java/hauveli/fishcasting/mixin/: CursedMostlyIndestructibleItemEntityMixin.java  HooklessFishingHookTideFishingHookMixin.java  TagRecentlyCaughtByTideFishingHookMixin.java  UnluckyBaitTideFishingHookMixin.java
common/src/main/java/hauveli/fishcasting/platform/: Services.java
common/src/main/java/hauveli/hexlikes/: CommonClass.java  Constants.java
common/src/main/java/hauveli/hexlikes/common/: CursedEntity.java  HexlikesAttributesJ.java  HexlikesConfig.java  HexlikesConfigJ.java  HexlikesEntityTypes.java  HexlikesItemsJ.java  HexlikesLoreFragment.java  HexlikesSoundsJ.java  HexlikesTags.java
common/src/main/java/hauveli/hexlikes/hexcasting/: BobberBasedCastEnv.java  HexlikesActionsJ.java
common/src/main/java/hauveli/hexlikes/mixin/: BobberAmbitPlayerBasedCastEnvMixin.java  BobberInWorldCastingEnvironmentMixin.java  ContentAccessorBucketItemMixin.java  CursedMostlyIndestructibleItemEntityMixin.java  CustomBehaviorTideFishingHookMixin.java  FixTheEnchantmentMixin.java  HexyTideyItemsMixin.java  MixinMinecraft.java  ProbabilityBobberTweakTideFishingManagerMixin.java  TackleBoxSlurpEntityMixin.java  WindUpCastBarOverlayMixin.java  YoinkTooltipRenderTideClientEventHandlerMixin.java  (+1 more)
common/src/main/resources/: fishcasting.mixins.json  hexlikes.mixins.json  pack.mcmeta
common/src/main/resources/assets/fishcasting/: sounds.json
common/src/main/resources/assets/hexlikes/: sounds.json
common/src/main/resources/assets/musicnotificaiton/: musics.json
doc/: README.md  hexdoc.toml  nodemon.json
doc/resources/assets/fishcasting/lang/: en_us.flatten.json5
doc/src/hexdoc_fishcasting/: _hooks.py
doc/src/hexdoc_fishcasting/_templates/pages/fishcasting/: example.html.jinja
doc/src/hexdoc_fishcasting/patchouli/: pages.py
fabric/: build.gradle
fabric/src/main/java/hauveli/hexlikes/: Hexlikes.java
fabric/src/main/resources/: fabric.mod.json  hexlikes.fabric.mixins.json
forge/src/main/java/hauveli/hexlikes/: Hexlikes.java
forge/src/main/resources/: hexlikes.forge.mixins.json
neoforge/: build.gradle
neoforge/src/main/java/hauveli/fishcasting/: Fishcasting.java  NeoforgeClientEntrypoint.java  NeoforgeEntrypoint.java
neoforge/src/main/java/hauveli/hexlikes/: Hexlikes.java
neoforge/src/main/resources/: fishcasting.neoforge.mixins.json  hexlikes.neoforge.mixins.json
(+207 files in other folders)
